# x-img

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MILESTONES.md  Makefile  README.md  TODO.md  TRUSTED_CERTIFICATES_AND_AXUM.md  deny.toml
.github/workflows/: quality.yml
contracts/dasobjectstore/: pinakotheke-capture-acquire-helper.v1.schema.json  pinakotheke-das-capture-helper.v1.schema.json  pinakotheke-das-object-read-helper.v1.schema.json  pinakotheke-das-stream-ingest-helper.v1.schema.json  pinakotheke-object-delete-helper.v1.schema.json  pinakotheke-object-ingest-stream.v1.schema.json  x-img-application-identity.v1.json
contracts/monas/: pinakotheke-capture-authority.v1.schema.json  pinakotheke-capture-completion.v1.schema.json  x-img-product-bootstrap.v1.json
contracts/synoptikon/: pinakotheke-product-manifest.v1.json
crates/pinakotheke-api/: Cargo.toml
crates/pinakotheke-api/src/: lib.rs
crates/pinakotheke-cli/: Cargo.toml
crates/pinakotheke-cli/src/: capture_worker_helper.rs  das_capture_helper.rs  das_object_read_helper.rs  das_stream_ingest_helper.rs  destination_revalidation_helper.rs  launchd.rs  lib.rs  local_objectstore.rs  main.rs  monolith.rs  object_delete_helper.rs  video_normalize.rs
crates/pinakotheke-core/: Cargo.toml
crates/pinakotheke-core/src/: account_refresh.rs  acquisition.rs  application_identity.rs  bioinformatics.rs  cache_alias.rs  capture_completion.rs  capture_plan_journal.rs  compliance_reconciliation.rs  destination.rs  extension_pairing.rs  gallery_catalogue.rs  host_context.rs  host_product.rs  instagram_discovery.rs  lib.rs  migration_backup.rs  object_ingest.rs  object_read.rs  persistent_gallery_admission.rs  persistent_video_gallery.rs  playback_delivery.rs  reconciliation.rs  review_admission.rs  segmented_video.rs  site_corpus.rs  synoptikon_catalogue.rs  video_normalization.rs  video_profile.rs  viewed_media.rs  website_capture_review.rs  x_discovery.rs  x_oauth.rs
crates/pinakotheke-model/: Cargo.toml
crates/pinakotheke-model/src/: lib.rs
crates/pinakotheke-web/: Cargo.toml  index.html
crates/pinakotheke-web/assets/: mnemosyne-shell.css  mnemosyne-tokens.css
crates/pinakotheke-web/src/: lib.rs
crates/x-img-api/: Cargo.toml
crates/x-img-api/src/: lib.rs
crates/x-img-cli/: Cargo.toml
crates/x-img-cli/src/: lib.rs  main.rs
crates/x-img-core/: Cargo.toml
crates/x-img-core/src/: bioinformatics.rs  bioinformatics_commit.rs  cache_alias.rs  connector_fixtures.rs  destination_selection.rs  extension_pairing.rs  host_product.rs  lib.rs  operations.rs  scheduler.rs  video_candidate.rs  viewed_media.rs  x_followed_accounts.rs
crates/x-img-model/: Cargo.toml
crates/x-img-model/src/: lib.rs
crates/x-img-web/: Cargo.toml
crates/x-img-web/assets/: mnemosyne-shell.css
crates/x-img-web/src/: lib.rs
docs/: account-refresh.rst  acquisition.rst  bioinformatics-commit.rst  cache-alias-lookup.rst  compatibility-matrix.md  conf.py  configuration.rst  critical-vertical.rst  das-application-identity.rst  deletion-compliance.rst  destinations.rst  direct-playback.rst  fault-injection-recovery.rst  firefox-capture.rst  firefox-extension.rst  firefox-signing.rst  firefox-toolbar.rst  gallery-catalogue.rst  gallery-deduplication.rst  identity-migration.rst  image-substitution.rst  index.rst  instagram-media-discovery.rst  lan-https.rst  local-monolith.rst  migration-export-restore.rst  monas-product.rst  mp4-substitution.rst  object-ingest.rst  object-read.rst  operations.rst  packaging.rst  quick-preview.rst  release-1.0.0.md  release-audits.rst  release-quality-policy.rst  review-admission.rst  segmented-video-gate.rst  synoptikon-integration.rst  upgrade-rollback-acceptance.rst  (+4 more)
docs/adr/: 0002-platform-policy.md  0003-bioinformatics-resource-commit.md  0004-endpoints-and-objectstores.md  0005-video-selection-normalization.md  0008-external-cache-fail-open.md  0011-pinakotheke-v1-identity-migration.md  index.rst
docs/fixtures/: fault-recovery-matrix.json  pinakotheke-identity-migration-matrix.json  release-audit-matrix.json
firefox-extension/: .amo-upload-uuid  adapters.json  background.js  content-explicit-open.js  manifest.json  options.html  options.js  popup.html  popup.js
fixtures/connectors/v1/: scenarios.json
fixtures/das-application/v1/: authorization-cases.json
fixtures/das-destinations/v1/: revalidation-cases.json
fixtures/host-context/v1/: synoptikon-valid.json
fixtures/instagram-discovery/v1/: pages.json
fixtures/monas/v1/: invalid-anonymous-api.json  invalid-direct-login-route.json
fixtures/segmented-media/v1/: cases.json
packaging/: Dockerfile.linux  build-firefox.py  build-macos-pkg.sh  check.py  check_v1_plan.py  sbom.py  x-img.spec
packaging/firefox/: pinakotheke-manifest.v1.candidate.json
scripts/audit/: check.py  check.sh
scripts/contracts/: check.py  check.sh
scripts/faults/: check.py  check.sh
scripts/firefox/: check_explicit_original.mjs  check_gallery_browser.py  check_identity_upgrade.mjs  check_image_substitution.py  check_installed_capture.mjs  check_normalized_playback.py  check_signed_install.mjs  check_toolbar_contract.py
scripts/quality/: check.py  check.sh
scripts/release/: check_upgrade_rollback.py  check_upgrade_rollback.sh  check_v1_cutover.py  check_v1_rehearsal.py  prepare_v1_cutover.py  test_check_v1_cutover.py
