# SPDX-License-Identifier: MPL-2.0

[workspace]
members = [
    "crates/pinakotheke-api",
    "crates/pinakotheke-cli",
    "crates/pinakotheke-core",
    "crates/pinakotheke-model",
    "crates/pinakotheke-web",
]
resolver = "3"

[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
repository = "https://github.com/sagrudd/pinakotheke"
authors = ["Pinakotheke maintainers"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
axum = { version = "=0.8.9", default-features = false, features = ["json", "query"] }
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150" }
sha2 = { version = "=0.10.9" }
yew = { version = "=0.23.0", default-features = false, features = ["csr"] }
