# SPDX-License-Identifier: MPL-2.0

[workspace]
members = [
    "crates/pinakotheke-api",
    "crates/pinakotheke-cli",
    "crates/pinakotheke-core",
    "crates/pinakotheke-model",
    "crates/pinakotheke-web",
]
resolver = "3"

[workspace.package]
version = "1.27.1"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
repository = "https://github.com/sagrudd/pinakotheke"
authors = ["Pinakotheke maintainers"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
axum = { version = "=0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
axum-server = { version = "=0.8.0", features = ["tls-rustls"] }
bytes = "=1.12.1"
clap = { version = "=4.6.1", features = ["derive"] }
gloo-net = { version = "=0.5.0", default-features = false, features = ["http", "json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150" }
url = { version = "=2.5.7" }
futures-core = "=0.3.32"
sha2 = { version = "=0.10.9" }
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "=0.6.8", default-features = false, features = ["fs"] }
yew = { version = "=0.23.0", default-features = false, features = ["csr"] }
wasm-bindgen-futures = "=0.4.76"
