# SPDX-License-Identifier: MPL-2.0

[package]
name = "pinakotheke-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
x-img-core = { package = "pinakotheke-core", path = "../pinakotheke-core" }

[dev-dependencies]
serde_json.workspace = true
tower = { version = "=0.5.3", features = ["util"] }
