# SPDX-License-Identifier: MPL-2.0

[package]
name = "pinakotheke-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
# Preserve the internal crate name used by both compatibility binaries.
name = "x_img_cli"

[[bin]]
name = "x-img"
path = "src/main.rs"

[[bin]]
name = "pinakotheke"
path = "src/bin/pinakotheke.rs"

[dependencies]
clap.workspace = true
x-img-core = { package = "pinakotheke-core", path = "../pinakotheke-core" }
