# SPDX-License-Identifier: MPL-2.0

[package]
name = "pinakotheke-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
# Preserve the internal crate name used by both compatibility binaries.
name = "x_img_cli"

[[bin]]
name = "x-img"
path = "src/main.rs"

[[bin]]
name = "pinakotheke"
path = "src/bin/pinakotheke.rs"

[dependencies]
axum.workspace = true
axum-server.workspace = true
bytes.workspace = true
clap.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
x-img-api = { package = "pinakotheke-api", path = "../pinakotheke-api" }
x-img-core = { package = "pinakotheke-core", path = "../pinakotheke-core" }

[dev-dependencies]
http-body-util = "=0.1.4"
