# SPDX-License-Identifier: MPL-2.0

[package]
name = "pinakotheke-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
gloo-net.workspace = true
serde.workspace = true
yew.workspace = true
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures.workspace = true
x-img-core = { package = "pinakotheke-core", path = "../pinakotheke-core" }
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "KeyboardEvent", "Window"] }
