# SPDX-License-Identifier: MPL-2.0

[package]
name = "x-img-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "x-img"
path = "src/main.rs"

[[bin]]
name = "pinakotheke"
path = "src/bin/pinakotheke.rs"

[dependencies]
clap.workspace = true
x-img-core = { path = "../x-img-core" }
