# SPDX-License-Identifier: MPL-2.0

[package]
name = "x-img-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
x-img-model = { path = "../x-img-model" }
