# SPDX-License-Identifier: MPL-2.0

[package]
name = "x-img-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
yew.workspace = true
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
